# apifox-endpoint-sync

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
examples/: .env.example  codex-prompt.example.md  endpoint-update.example.json
scripts/: apifox-endpoint-sync
src/apifox_endpoint_sync/: __init__.py  cli.py
tests/: test_cli.py
