[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apifox-endpoint-sync"
version = "0.1.0"
description = "安全的单 endpoint Apifox 文档同步工具，让 Codex 只更新一个接口，不做导入或项目级写入。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "sunny-kobe" }
]
keywords = ["apifox", "codex", "api-documentation", "cli", "automation", "ai-agent", "safety"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sunny-kobe/apifox-endpoint-sync"
Issues = "https://github.com/sunny-kobe/apifox-endpoint-sync/issues"

[project.scripts]
apifox-endpoint-sync = "apifox_endpoint_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
