[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apifox-endpoint-sync"
version = "0.1.0"
description = "Apifox 接口文档更新 CLI：安全同步单个 endpoint，适合 Codex / AI Agent 维护 API 文档，支持 dry-run 和本地安全校验。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "sunny-kobe" }
]
keywords = [
  "apifox",
  "apifox-cli",
  "codex",
  "api-documentation",
  "api-docs",
  "endpoint-sync",
  "cli",
  "automation",
  "ai-agent",
  "dry-run",
  "接口文档",
  "api文档",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/sunny-kobe/apifox-endpoint-sync"
Issues = "https://github.com/sunny-kobe/apifox-endpoint-sync/issues"

[project.scripts]
apifox-endpoint-sync = "apifox_endpoint_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
